--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "ngx-bootstrap": "^3.1.1",
     "ngx-pagination": "^3.2.1",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
