--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "ng2-validation": "^4.2.0",
     "ng5-slider": "^1.1.7",
     "ngx-bootstrap": "^3.1.1",
     "ngx-pagination": "^3.2.1",
+    "ngx-select-dropdown": "^1.0.1",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "@ngx-translate/core": "^11.0.1",
-    "@ngx-translate/http-loader": "^4.0.0"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
